adds scss styles

--- a/IfRespostasCertas/certop2.html
+++ b/IfRespostasCertas/certop2.html
@@ -13,11 +13,10 @@
 
 <body>
 <center>
-    <img src="/home/dougcaval/Desktop/Cultura Game/imgs/propositodecideC.png" >
+    <img src="/imgs/propositodecideC.png" >
 </center>
+
 <center>
-
-
     <a href="pergunta3.html" class="btn btn-primary">Continuar</a>
     
     </center>  
