--- a/IfRespostasCertas/certop1.html
+++ b/IfRespostasCertas/certop1.html
@@ -1,28 +1,22 @@
 <html>
-
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-</head>
-
+    <link rel="stylesheet" href="styles.scss">
+    <link href='https://fonts.googleapis.com/css?family=Dosis' rel='stylesheet'>
+    <link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet'>
+  </head>
 <title>
-    Cultura Game-tente novamente
+    Cultura Game - Acertou!
 </title>
-
-
 <body>
-<center>
-    <img src="/home/dougcaval/Desktop/Cultura Game/imgs/somos_guardioesC.png" >
-</center>
-<center>
-
-
-    <a href="pergunta2.html" class="btn btn-primary">Continuar</a>
-    
-    </center>  
-    <p>
-        <a href="home.html" class="btn btn-danger">Sair</a>
+  <div class="container">
+    <img class="card-img-top" src="imgs/somos_guardioesC.png" style="width: 80rem">
+    <a href="pergunta2.html" class="btn btn-primary">Continuar</a>  
+    <p class="sair">
+      <a href="home.html" class="btn btn-danger btn-sair">Sair</a>
     </p>
+  </div>
 </body>
 </html>
