--- a/Perguntas/pergunta3.html
+++ b/Perguntas/pergunta3.html
@@ -1,39 +1,36 @@
 <html>
-
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-</head>
-
+    <link rel="stylesheet" href="styles.scss">
+    <link href='https://fonts.googleapis.com/css?family=Dosis' rel='stylesheet'>
+    <link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet'>
+  </head>
 <title>
-    Cultura Game-Pergunta 3
+    Cultura Game - Pergunta 3
 </title>
-
-
 <body>
-    <p>
-        <a href="home.html" class="btn btn-danger">Sair</a>
-    </p>
-    <p>
-        
-    </p>
-    <center>
-    <div class="card" style="width: 30rem;">
-        <img class="card-img-top" src="/home/dougcaval/Desktop/Cultura Game/imgs/somosnerds.png" alt="Imagem de capa do card">
-        <div class="card-body">
-          <h5 class="card-title">Este é um pilar forte na nossa cultura, qual é ?</h5>
-          <p class="card-text"><p>Mantenha-se atualizado e tenha conhecimento profundo da parte técnica do seu trabalho.</P>
-          <a href="erradop3.html" class="btn btn-info">Aprendizado acima do plano</a>
-          <p></p>
-          <a href="erradop3.html" class="btn btn-info">Resolva o problema certo</a>
-          <p></p>
-          <a href="certop3.html" class="btn btn-info">Somos Nerds</a>
-          <p></p>
-          <a href="erradop3.html" class="btn btn-info">O propósito decide</a>
-        </div>
-      </div>
-    </center>
-    
+  <div class="card container" style="width: 38rem">
+    <img class="card-img-top" src="imgs/somosnerds.png" alt="Imagem de capa do card">
+    <div class="card-body">
+      <p class="card-text">"Mantenha-se atualizado e tenha conhecimento profundo da parte técnica do seu trabalho."</p>
+      <div class="style-line"></div>
+      <h5 class="card-title">Qual de nossos pilares essa afirmação representa?</h5>
+      <p>
+        <a href="erradop3.html" class="btn btn-info">Aprendizado acima do plano</a>
+      </p><p>
+        <a href="erradop3.html" class="btn btn-info">Resolva o problema certo</a>
+      </p><p>
+        <a href="certop3.html" class="btn btn-info">Somos Nerds</a>
+      </p><p>
+        <a href="erradop3.html" class="btn btn-info">O propósito decide</a>
+      </p>
+      <p class="sair">
+        <a href="home.html" class="btn btn-danger btn-sair">Sair</a>
+      </p>
+    </div>
+  </div>
+
 </body>
 </html>
