updates scss styles

--- a/IfRespostasCertas/certop1.html
+++ b/IfRespostasCertas/certop1.html
@@ -11,12 +11,14 @@
     Cultura Game - Acertou!
 </title>
 <body>
-  <div class="container">
-    <img class="card-img-top" src="imgs/somos_guardioesC.png" style="width: 80rem">
-    <a href="pergunta2.html" class="btn btn-primary">Continuar</a>  
-    <p class="sair">
-      <a href="home.html" class="btn btn-danger btn-sair">Sair</a>
-    </p>
+  <div class="container" style="width: 38rem">
+    <img class="card-img-top" src="imgs/somos_guardioesC.png">
+    <div class="card-body btn-group-next">
+      <p>
+        <a href="home.html" class="btn btn-danger btn-exit">Sair</a>
+        <a href="pergunta2.html" class="btn btn-continue">Continuar</a>
+      </p>
+    </div>
   </div>
 </body>
 </html>
