--- a/Perguntas/pergunta2.html
+++ b/Perguntas/pergunta2.html
@@ -12,7 +12,7 @@
     Cultura Game - Pergunta 2
 </title>
 <body>
-  <div class="card container" style="width: 38rem;">
+  <div class="card container" style="width: 38rem">
     <img class="card-img-top" src="imgs/propositodecide.png">
     <div class="card-body">
       <p class="card-text">"Sempre opte por ações que transformem nosso propósito em realidade, aposte em decisões que reforcem nosso propósito, mesmo que o resultado esperado venha a longo prazo."</p>
@@ -27,8 +27,8 @@
       </p><p>
         <a href="certop2.html" class="btn btn-info">O propósito decide</a>
       </p>
-      <p class="sair">
-        <a href="home.html" class="btn btn-danger btn-sair">Sair</a>
+      <p class="exit">
+        <a href="home.html" class="btn btn-danger btn-exit">Sair</a>
       </p>
     </div>
   </div>
