--- a/Perguntas/pergunta3.html
+++ b/Perguntas/pergunta3.html
@@ -26,8 +26,8 @@
       </p><p>
         <a href="erradop3.html" class="btn btn-info">O propósito decide</a>
       </p>
-      <p class="sair">
-        <a href="home.html" class="btn btn-danger btn-sair">Sair</a>
+      <p class="exit">
+        <a href="home.html" class="btn btn-danger btn-exit">Sair</a>
       </p>
     </div>
   </div>
