--- a/IfRespostasCertas/certop5.html
+++ b/IfRespostasCertas/certop5.html
@@ -1,28 +1,25 @@
 <html>
-
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+    <link rel="stylesheet" href="styles.scss">
+    <link href='https://fonts.googleapis.com/css?family=Dosis' rel='stylesheet'>
+    <link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet'>
 </head>
-
 <title>
-    Cultura Game-tente novamente
+    Cultura Game - Acertou!
 </title>
-
-
 <body>
-<center>
-    <img src="/home/dougcaval/Desktop/Cultura Game/imgs/ondeninguemerrouC.png" >
-</center>
-<center>
-
-
-    <a href="pergunta6.html" class="btn btn-primary">Continuar</a>
-    
-    </center>  
-    <p>
-        <a href="home.html" class="btn btn-danger">Sair</a>
-    </p>
+  <div class="container" style="width: 38rem">
+    <img class="card-img-top" src="imgs/ondeninguemerrouC.png" >
+    <div class="card-body btn-group-next">
+      <p>
+        <a href="home.html" class="btn btn-danger btn-exit">Sair</a>
+        <a class="space"></a>
+        <a href="pergunta6.html" class="btn btn-continue">Continuar</a>
+      </p>
+    </div>
+  </div>
 </body>
 </html>
