--- a/Perguntas/pergunta1.html
+++ b/Perguntas/pergunta1.html
@@ -27,8 +27,8 @@
       </p><p>
         <a href="erradop1.html" class="btn btn-info">O propósito decide</a>
       </p>
-      <p class="sair">
-        <a href="home.html" class="btn btn-danger btn-sair">Sair</a>
+      <p class="exit">
+        <a href="home.html" class="btn btn-danger btn-exit">Sair</a>
       </p>
     </div>
   </div>
