updates scss styles in the file 'Perguntas'

--- a/Perguntas/pergunta11.html
+++ b/Perguntas/pergunta11.html
@@ -1,39 +1,35 @@
 <html>
-
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+  <link rel="stylesheet" href="../styles.scss">
+  <link href='https://fonts.googleapis.com/css?family=Dosis' rel='stylesheet'>
+  <link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet'>
 </head>
-
 <title>
-    Cultura Game-Pergunta 11
+  Cultura Game - Pergunta 11
 </title>
-
-
 <body>
-    <p>
-        <a href="home.html" class="btn btn-danger">Sair</a>
-    </p>
-    <p>
-        
-    </p>
-    <center>
-    <div class="card" style="width: 30rem;">
-        <img class="card-img-top" src="/home/dougcaval/Desktop/Cultura Game/imgs/colaborativos.png" alt="Imagem de capa do card">
-        <div class="card-body">
-          <h5 class="card-title">De qual pilar estamos falando?</h5>
-          <p class="card-text">Valorizamos quem adota e dissemina tech foundations, frameworks, modos de trabalho e ritos de outros times  e os que ajudam a co-criar algo ainda melhor.</p>
-          <a href="erradop11.html" class="btn btn-info">Inclusão e Respeito</a>
-          <p></p>
-          <a href="erradop11.html" class="btn btn-info">Somos Nerds</a>
-          <p></p>
-          <a href="erradop11.html" class="btn btn-info">Somos Guardiões</a>
-          <p></p>
-          <a href="certop11.html" class="btn btn-info">Somos colaborativos</a>
-        </div>
-      </div>
-    </center>
-    
+  <div class="card container">
+    <img class="card-img-top" src="../OsPilaresDaCultura/SomosColaborativos/colaborativos.png" alt="Imagem de capa do card">
+    <div class="card-body">
+      <p class="card-text">"Valorizamos quem adota e dissemina tech foundations, frameworks, modos de trabalho e ritos de outros times e os que ajudam a co-criar algo ainda melhor."</p>
+      <div class="style-line"></div>
+      <h5 class="card-title">De qual pilar estamos falando?</h5>
+      <p>
+        <a href="../IfRespostasErradas/erradop11.html" class="btn btn-info">Inclusão e Respeito</a>
+      </p><p>
+        <a href="../IfRespostasErradas/erradop11.html" class="btn btn-info">Somos Guardiões</a>
+      </p><p>
+        <a href="../IfRespostasCertas/certop11.html" class="btn btn-info">Somos colaborativos</a>
+      </p><p>
+        <a href="../IfRespostasErradas/erradop11.html" class="btn btn-info">O propósito decide</a>
+      </p>
+      <p class="exit">
+        <a href="../home.html" class="btn btn-danger btn-exit">Sair</a>
+      </p>
+    </div>
+  </div>
 </body>
 </html>
