--- a/Perguntas/pergunta3.html
+++ b/Perguntas/pergunta3.html
@@ -1,36 +1,35 @@
 <html>
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-    <link rel="stylesheet" href="styles.scss">
-    <link href='https://fonts.googleapis.com/css?family=Dosis' rel='stylesheet'>
-    <link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet'>
-  </head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+  <link rel="stylesheet" href="../styles.scss">
+  <link href='https://fonts.googleapis.com/css?family=Dosis' rel='stylesheet'>
+  <link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet'>
+</head>
 <title>
-    Cultura Game - Pergunta 3
+  Cultura Game - Pergunta 3
 </title>
 <body>
-  <div class="card container" style="width: 38rem">
-    <img class="card-img-top" src="imgs/somosnerds.png" alt="Imagem de capa do card">
+  <div class="card container">
+    <img class="card-img-top" src="../OsPilaresDaCultura/SomosNerds/somosnerds.png" alt="Imagem de capa do card">
     <div class="card-body">
       <p class="card-text">"Mantenha-se atualizado e tenha conhecimento profundo da parte técnica do seu trabalho."</p>
       <div class="style-line"></div>
       <h5 class="card-title">Qual de nossos pilares essa afirmação representa?</h5>
       <p>
-        <a href="erradop3.html" class="btn btn-info">Aprendizado acima do plano</a>
+        <a href="../IfRespostasErradas/erradop3.html" class="btn btn-info">Aprendizado acima do plano</a>
       </p><p>
-        <a href="erradop3.html" class="btn btn-info">Resolva o problema certo</a>
+        <a href="../IfRespostasErradas/erradop3.html" class="btn btn-info">Resolva o problema certo</a>
       </p><p>
-        <a href="certop3.html" class="btn btn-info">Somos Nerds</a>
+        <a href="../IfRespostasCertas/certop3.html" class="btn btn-info">Somos Nerds</a>
       </p><p>
-        <a href="erradop3.html" class="btn btn-info">O propósito decide</a>
+        <a href="../IfRespostasErradas/erradop3.html" class="btn btn-info">O propósito decide</a>
       </p>
       <p class="exit">
-        <a href="home.html" class="btn btn-danger btn-exit">Sair</a>
+        <a href="../home.html" class="btn btn-danger btn-exit">Sair</a>
       </p>
     </div>
   </div>
-
 </body>
 </html>
