--- a/Perguntas/pergunta2.html
+++ b/Perguntas/pergunta2.html
@@ -1,34 +1,33 @@
 <html>
-
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-    <link rel="stylesheet" href="styles.scss">
-    <link href='https://fonts.googleapis.com/css?family=Dosis' rel='stylesheet'>
-    <link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet'>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+  <link rel="stylesheet" href="../styles.scss">
+  <link href='https://fonts.googleapis.com/css?family=Dosis' rel='stylesheet'>
+  <link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet'>
 </head>
 <title>
-    Cultura Game - Pergunta 2
+  Cultura Game - Pergunta 2
 </title>
 <body>
-  <div class="card container" style="width: 38rem">
-    <img class="card-img-top" src="imgs/propositodecide.png">
+  <div class="card container">
+    <img class="card-img-top" src="../OsPilaresDaCultura/OPropositoDecide/propositodecide.png">
     <div class="card-body">
       <p class="card-text">"Sempre opte por ações que transformem nosso propósito em realidade, aposte em decisões que reforcem nosso propósito, mesmo que o resultado esperado venha a longo prazo."</p>
       <div class="style-line"></div>
       <h5 class="card-title">Esse é um ponto muito importante na nossa cultura. De qual pilar estamos falando?</h5>
       <p>
-        <a href="erradop2.html" class="btn btn-info">Aprendizado acima do plano</a>
+        <a href="../IfRespostasErradas/erradop2.html" class="btn btn-info">Aprendizado acima do plano</a>
       </p><p>
-        <a href="erradop2.html" class="btn btn-info">Somos colaborativos</a>
+        <a href="../IfRespostasErradas/erradop2.html" class="btn btn-info">Somos colaborativos</a>
       </p><p>
-        <a href="erradop2.html" class="btn btn-info">Somos Guardiões</a>
+        <a href="../IfRespostasErradas/erradop2.html" class="btn btn-info">Somos Guardiões</a>
       </p><p>
-        <a href="certop2.html" class="btn btn-info">O propósito decide</a>
+        <a href="../IfRespostasCertas/certop2.html" class="btn btn-info">O propósito decide</a>
       </p>
       <p class="exit">
-        <a href="home.html" class="btn btn-danger btn-exit">Sair</a>
+        <a href="../home.html" class="btn btn-danger btn-exit">Sair</a>
       </p>
     </div>
   </div>
