--- a/Perguntas/pergunta4.html
+++ b/Perguntas/pergunta4.html
@@ -1,39 +1,34 @@
 <html>
-
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+  <link rel="stylesheet" href="../styles.scss">
+  <link href='https://fonts.googleapis.com/css?family=Dosis' rel='stylesheet'>
+  <link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet'>
 </head>
-
 <title>
-    Cultura Game-Pergunta 4
+  Cultura Game - Pergunta 4
 </title>
-
-
 <body>
-    <p>
-        <a href="home.html" class="btn btn-danger">Sair</a>
-    </p>
-    <p>
-        
-    </p>
-    <center>
-    <div class="card" style="width: 30rem;">
-        <img class="card-img-top" src="/home/dougcaval/Desktop/Cultura Game/imgs/transformador.png" alt="Imagem de capa do card">
-        <div class="card-body">
-          <h5 class="card-title">Temos muitos exemplos na Zup, de qual pilar da cultura estamos falando?</h5>
-          <p class="card-text"> <p> Desempenhar seu papel com maestria é importante, porém se preocupar em ajudar a mover o todo é essencial. #beafounder</p>
-          <a href="erradop4.html" class="btn btn-info">Erre onde ninguém errou</a>
-          <p></p>
-          <a href="certop4.html" class="btn btn-info">Seja transformador</a>
-          <p></p>
-          <a href="erradop4.html" class="btn btn-info">Aprendizado acima do plano</a>
-          <p></p>
-          <a href="erradop4.html" class="btn btn-info">Time fora da curva</a>
-        </div>
-      </div>
-    </center>
-    
+  <div class="card container">
+    <img class="card-img-top" src="../OsPilaresDaCultura/SejaTransformador/transformador.png" alt="Imagem de capa do card">
+    <div class="card-body">
+      <p class="card-text">"Desempenhar seu papel com maestria é importante, porém se preocupar em ajudar a mover o todo é essencial." #beafounder</p>
+      <div class="style-line"></div>
+      <h5 class="card-title">Temos muitos exemplos na Zup, de qual pilar da cultura estamos falando?</h5>
+      <p>
+        <a href="../IfRespostasErradas/erradop4.html" class="btn btn-info">Erre onde ninguém errou</a>
+      </p><p>
+        <a href="../IfRespostasErradas/erradop4.html" class="btn btn-info">Aprendizado acima do plano</a>
+      </p><p>
+        <a href="../IfRespostasCertas/certop4.html" class="btn btn-info">Seja transformador</a>
+      </p><p>
+        <a href="../IfRespostasErradas/erradop4.html" class="btn btn-info">Time fora da curva</a>
+      </p>
+      <p class="exit">
+        <a href="../home.html" class="btn btn-danger btn-exit">Sair</a>
+      </p>
+    </div>
 </body>
 </html>
