--- a/Perguntas/pergunta5.html
+++ b/Perguntas/pergunta5.html
@@ -1,41 +1,34 @@
 <html>
-
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+  <link rel="stylesheet" href="../styles.scss">
+  <link href='https://fonts.googleapis.com/css?family=Dosis' rel='stylesheet'>
+  <link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet'>
 </head>
-
 <title>
-    Cultura Game-Pergunta 5
+  Cultura Game - Pergunta 5
 </title>
-
-
 <body>
-    <p>
-        <a href="home.html" class="btn btn-danger">Sair</a>
-    </p>
-    <p>
-        
-    </p>
-    <center>
-    <div class="card" style="width: 30rem;">
-        <img class="card-img-top" src="/home/dougcaval/Desktop/Cultura Game/imgs/ondeninguemerrou.png" alt="Imagem de capa do card">
-        <div class="card-body">
-          <h5 class="card-title">Esse é pra quem tem coragem , rsrs, de qual pilar estamos falando?</h5>
-          <p class="card-text">Estudamos os melhores do mundo, nos comparamos com referências de mercado.Aprendemos com erros e acertos deles, buscamos variáveis
-               para criar algo ainda melhor.Por isso, construa coisas audaciosas e erre com estilo.
-          </p>
-          <a href="erradop5.html" class="btn btn-info">Aprendizado acima do plano</a>
-          <p></p>
-          <a href="erradop5.html" class="btn btn-info">Somos Nerds</a>
-          <p></p>
-          <a href="erradop5.html" class="btn btn-info">O propósito decide</a>
-          <p></p>
-          <a href="certop5.html" class="btn btn-info">Erre onde ninguém errou</a>
-        </div>
-      </div>
-    </center>
-    
+  <div class="card container">
+    <img class="card-img-top" src="../OsPilaresDaCultura/ErreOndeNinguemErrou/ondeninguemerrou.png" alt="Imagem de capa do card">
+    <div class="card-body">
+      <p class="card-text">"Estudamos os melhores do mundo, nos comparamos com referências de mercado, aprendemos com erros e acertos deles, buscamos variáveis para criar algo ainda melhor. Por isso, construa coisas audaciosas e erre com estilo."</p>
+      <div class="style-line"></div>
+      <h5 class="card-title">Esse é pra quem tem coragem, rsrs, de qual pilar estamos falando?</h5>
+      <p>
+        <a href="../IfRespostasErradas/erradop5.html" class="btn btn-info">Aprendizado acima do plano</a>
+      </p><p>
+        <a href="../IfRespostasErradas/erradop5.html" class="btn btn-info">Somos Nerds</a>
+      </p><p>
+        <a href="../IfRespostasErradas/erradop5.html" class="btn btn-info">O propósito decide</a>
+      </p><p>
+        <a href="../IfRespostasCertas/certop5.html" class="btn btn-info">Erre onde ninguém errou</a>
+      <p class="exit">
+        <a href="../home.html" class="btn btn-danger btn-exit">Sair</a>
+      </p>
+    </div>
+  </div>
 </body>
 </html>
