--- a/Perguntas/pergunta6.html
+++ b/Perguntas/pergunta6.html
@@ -1,41 +1,34 @@
 <html>
-
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+  <link rel="stylesheet" href="../styles.scss">
+  <link href='https://fonts.googleapis.com/css?family=Dosis' rel='stylesheet'>
+  <link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet'>
 </head>
-
 <title>
-    Cultura Game-Pergunta 6
+  Cultura Game - Pergunta 6
 </title>
-
-
 <body>
-    <p>
-        <a href="home.html" class="btn btn-danger">Sair</a>
-    </p>
-    <p>
-        
-    </p>
-    <center>
-    <div class="card" style="width: 30rem;">
-        <img class="card-img-top" src="/home/dougcaval/Desktop/Cultura Game/imgs/problemacerto.png" alt="Imagem de capa do card">
-        <div class="card-body">
-          <h5 class="card-title">Vamos ver se vocês estão atentos, que pilar é esse?</h5>
-          <p class="card-text">Seja obcecado por entender o que é relevante para o cliente, seus comportamentos, hábitos, desejo, problemas,
-              desafios e assim por diante.
-          </p>
-          <a href="erradop6.html" class="btn btn-info">Inclusão e Respeito</a>
-          <p></p>
-          <a href="erradop6.html" class="btn btn-info">Somos Nerds</a>
-          <p></p>
-          <a href="erradop6.html" class="btn btn-info">Somos Guardiões</a>
-          <p></p>
-          <a href="certop6.html" class="btn btn-info">Resolva o problema certo</a>
-        </div>
-      </div>
-    </center>
-    
+  <div class="card container">
+    <img class="card-img-top" src="../OsPilaresDaCultura/ResolvaOProblemaCerto/problemacerto.png" alt="Imagem de capa do card">
+    <div class="card-body">
+      <p class="card-text">"Seja obcecado por entender o que é relevante para o cliente, seus comportamentos, hábitos, desejo, problemas,desafios e assim por diante."</p>
+      <div class="style-line"></div>
+      <h5 class="card-title">Vamos ver se vocês estão atentos, que pilar é esse?</h5>
+      <p>
+        <a href="../IfRespostasErradas/erradop6.html" class="btn btn-info">Inclusão e Respeito</a>
+      </p><p>
+        <a href="../IfRespostasErradas/erradop6.html" class="btn btn-info">Somos Nerds</a>
+      </p><p>
+        <a href="../IfRespostasErradas/erradop6.html" class="btn btn-info">Somos Guardiões</a>
+      </p><p>
+        <a href="../IfRespostasCertas/certop6.html" class="btn btn-info">Resolva o problema certo</a>
+      <p class="exit">
+        <a href="../home.html" class="btn btn-danger btn-exit">Sair</a>
+      </p>
+    </div>
+  </div>
 </body>
 </html>
