--- a/Perguntas/pergunta7.html
+++ b/Perguntas/pergunta7.html
@@ -1,41 +1,35 @@
 <html>
-
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+  <link rel="stylesheet" href="../styles.scss">
+  <link href='https://fonts.googleapis.com/css?family=Dosis' rel='stylesheet'>
+  <link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet'>
 </head>
-
 <title>
-    Cultura Game-Pergunta 7
+  Cultura Game - Pergunta 7
 </title>
-
-
 <body>
-    <p>
-        <a href="home.html" class="btn btn-danger">Sair</a>
-    </p>
-    <p>
-        
-    </p>
-    <center>
-    <div class="card" style="width: 30rem;">
-        <img class="card-img-top" src="/home/dougcaval/Desktop/Cultura Game/imgs/aprendizado.png" alt="Imagem de capa do card">
-        <div class="card-body">
-          <h5 class="card-title">Qual pilar é esse heim, me mostra que você é fera em Cultura ZUP?</h5>
-          <p class="card-text">Priorize acompanhar aprendizados do que acompanhar status de atividades.Sempre que aprender algo, compartilhe seus aprendizados.
-              Isto acelera a evolução da Zup e economiza erros.
-          </p>
-          <a href="erradop7.html" class="btn btn-info">Inclusão e Respeito</a>
-          <p></p>
-          <a href="erradop7.html" class="btn btn-info">Somos Nerds</a>
-          <p></p>
-          <a href="certop7.html" class="btn btn-info">Aprendizado acima do plano</a>
-          <p></p>
-          <a href="erradop7.html" class="btn btn-info">O propósito decide</a>
-        </div>
-      </div>
-    </center>
-    
+  <div class="card container">
+    <img class="card-img-top" src="../OsPilaresDaCultura/AprendizadoAcimaDoPlano/aprendizado.png" alt="Imagem de capa do card">
+    <div class="card-body">
+      <p class="card-text">"Priorize acompanhar aprendizados do que acompanhar status de atividades.Sempre que aprender algo, compartilhe seus aprendizados. Isto acelera a evolução da Zup e economiza erros."</p>
+      <div class="style-line"></div>
+      <h5 class="card-title">Que pilar é esse? Mostre que você é fera em Cultura ZUP!</h5>
+      <p>
+        <a href="../IfRespostasErradas/erradop7.html" class="btn btn-info">Inclusão e Respeito</a>
+      </p><p>
+        <a href="../IfRespostasErradas/erradop7.html" class="btn btn-info">Somos Nerds</a>
+      </p><p>
+        <a href="../IfRespostasCertas/certop7.html" class="btn btn-info">Aprendizado acima do plano</a>
+      </p><p>
+        <a href="../IfRespostasErradas/erradop7.html" class="btn btn-info">O propósito decide</a>
+      </p>
+      <p class="exit">
+        <a href="../home.html" class="btn btn-danger btn-exit">Sair</a>
+      </p>
+    </div>
+  </div>
 </body>
 </html>
