updates scss styles in the 'IfRespostasErradas' and 'IfRespostasCertas' folders

--- a/IfRespostasCertas/certop1.html
+++ b/IfRespostasCertas/certop1.html
@@ -1,22 +1,24 @@
 <html>
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-    <link rel="stylesheet" href="styles.scss">
-    <link href='https://fonts.googleapis.com/css?family=Dosis' rel='stylesheet'>
-    <link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet'>
-  </head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+  <link rel="stylesheet" href="..\styles.scss">
+  <link href='https://fonts.googleapis.com/css?family=Dosis' rel='stylesheet'>
+  <link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet'>
+</head>
 <title>
-    Cultura Game - Acertou!
+  Cultura Game - Acertou!
 </title>
 <body>
-  <div class="container" style="width: 38rem">
-    <img class="card-img-top" src="imgs/somos_guardioesC.png">
+  <div class="card container container-result">
+    <p class="card-title result-title">Acertou!</p>
+    <img class="card-img-top card-img-result" src="../OsPilaresDaCultura/SomosGuardioes/somos_guardioesC.png" alt="Imagem do card acertou">
     <div class="card-body btn-group-next">
       <p>
-        <a href="home.html" class="btn btn-danger btn-exit">Sair</a>
-        <a href="pergunta2.html" class="btn btn-continue">Continuar</a>
+        <a href="../home.html" class="btn btn-danger btn-exit">Sair</a>
+        <a class="space"></a>
+        <a href="../Perguntas/pergunta2.html" class="btn btn-continue">Continuar</a>
       </p>
     </div>
   </div>
