--- a/IfRespostasErradas/erradop1.html
+++ b/IfRespostasErradas/erradop1.html
@@ -12,6 +12,7 @@
 </title>
 <body>
   <div class="card container container-result">
+    <p class="card-title result-title">Tente novamente</p>
     <img class="card-img-top card-img-result" src="../OsPilaresDaCultura/SomosGuardioes/somos_guardioesR.png" alt="Imagem do card tente novamente">
     <img class="card-img-top card-img-result" src="../OsPilaresDaCultura/SomosGuardioes/templateSomosGuardioes.jpeg" alt="Card sobre o pilar Somos Guardiões">
     <div class="card-body btn-group-next">
