--- a/IfRespostasErradas/erradop10.html
+++ b/IfRespostasErradas/erradop10.html
@@ -12,6 +12,7 @@
 </title>
 <body>
   <div class="card container container-result">
+    <p class="card-title result-title">Tente novamente</p>
     <img class="card-img-top card-img-result" src="../OsPilaresDaCultura/ZupperAjudaZupper/ajudaR.png" alt="Imagem do card tente novamente">
     <img class="card-img-top card-img-result" src="../OsPilaresDaCultura/ZupperAjudaZupper/templateZupperAjudaZupper.jpeg" alt="Card sobre o pilar Zupper Ajuda Zupper">
     <div class="card-body btn-group-next">
