--- a/IfRespostasErradas/erradop11.html
+++ b/IfRespostasErradas/erradop11.html
@@ -12,6 +12,7 @@
 </title>
 <body>
   <div class="card container container-result">
+    <p class="card-title result-title">Tente novamente</p>
     <img class="card-img-top card-img-result" src="../OsPilaresDaCultura/SomosColaborativos/colaborativosR.png" alt="Imagem do card tente novamente">
     <img class="card-img-top card-img-result" src="../OsPilaresDaCultura/SomosColaborativos/templateSomosColaborativos.jpeg" alt="Card sobre o pilar Somos Colaborativos">
     <div class="card-body btn-group-next">
