--- a/IfRespostasErradas/erradop12.html
+++ b/IfRespostasErradas/erradop12.html
@@ -12,6 +12,7 @@
 </title>
 <body>
   <div class="card container container-result">
+    <p class="card-title result-title">Tente novamente</p>
     <img class="card-img-top card-img-result" src="../OsPilaresDaCultura/ForaDaCurva/curvaR.png" alt="Imagem do card tente novamente">
     <img class="card-img-top card-img-result" src="../OsPilaresDaCultura/ForaDaCurva/templateTimeforaDaCurva.jpeg" alt="Card sobre o pilar Time Fora da Curva">
     <div class="card-body btn-group-next">
