--- a/IfRespostasErradas/erradop2.html
+++ b/IfRespostasErradas/erradop2.html
@@ -12,6 +12,7 @@
 </title>
 <body>
   <div class="card container container-result">
+    <p class="card-title result-title">Tente novamente</p>
     <img class="card-img-top card-img-result" src="../OsPilaresDaCultura/OPropositoDecide/propositodecideR.png" alt="Imagem do card tente novamente">
     <img class="card-img-top card-img-result" src="../OsPilaresDaCultura/OPropositoDecide/templateOPropositoDecide.jpeg" alt="Card sobre o pilar O Propósito Decide">
     <div class="card-body btn-group-next">
