--- a/IfRespostasErradas/erradop4.html
+++ b/IfRespostasErradas/erradop4.html
@@ -12,6 +12,7 @@
 </title>
 <body>
   <div class="card container container-result">
+    <p class="card-title result-title">Tente novamente</p>
     <img class="card-img-top card-img-result" src="../OsPilaresDaCultura/SejaTransformador/transformadorR.png"alt="Imagem do card tente novamente">
     <img class="card-img-top card-img-result" src="../OsPilaresDaCultura/SejaTransformador/templateSejaTransformador.jpeg" alt="Card sobre o pilar Seja Transformador">
     <div class="card-body btn-group-next">
