--- a/IfRespostasErradas/erradop8.html
+++ b/IfRespostasErradas/erradop8.html
@@ -12,6 +12,7 @@
 </title>
 <body>
   <div class="card container container-result">
+    <p class="card-title result-title">Tente novamente</p>
     <img class="card-img-top card-img-result" src="../OsPilaresDaCultura/InclusaoERespeito/inclusaoR.png" alt="Imagem do card tente novamente">
     <img class="card-img-top card-img-result" src="../OsPilaresDaCultura/InclusaoERespeito/templateInclusaoERespeito.jpeg" alt="Card sobre o pilar Inclusão e Respeito">
     <div class="card-body btn-group-next">
