--- a/IfRespostasErradas/erradop9.html
+++ b/IfRespostasErradas/erradop9.html
@@ -12,6 +12,7 @@
 </title>
 <body>
   <div class="card container container-result">
+    <p class="card-title result-title">Tente novamente</p>
     <img class="card-img-top card-img-result" src="../OsPilaresDaCultura/VaiQueDaConfia/confiaR.png" alt="Imagem do card tente novamente">
     <img class="card-img-top card-img-result" src="../OsPilaresDaCultura/VaiQueDaConfia/templateVaiqueDaConfia.jpeg" alt="Card sobre o pilar Vai Que Dá Confia">
     <div class="card-body btn-group-next">
