--- a/conclusao.html
+++ b/conclusao.html
@@ -1,28 +1,24 @@
 <html>
-
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+  <link rel="stylesheet" href="..\styles.scss">
+  <link href='https://fonts.googleapis.com/css?family=Dosis' rel='stylesheet'>
+  <link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet'>
 </head>
-
 <title>
-    Cultura Game-Home
+  Cultura Game - Conclusão
 </title>
-
-
 <body>
-    <center>
-        <img src="/home/dougcaval/Desktop/Cultura Game/imgs/conclusao.png" class="d-block w-100" alt="400">
-    </center>
-
-<center>
-
-
-<a href="certificado.html" class="btn btn-primary">Pegar Certificado</a>
-<a href="home.html" class="btn btn-info">Ir para início</a>
-</center>  
-
-
+  <div class="card container container-congrats">
+    <p class="card-title result-title congrats-title">Parabéns!</p>
+    <img class="card-img-top card-img-congrats" src="imgs/conclusao.png">
+    <div class="card-body btn-group-congrats">
+      <a href="certificado.html" class="btn btn-continue btn-congrats">Pegar Certificado</a>
+      <a class="space"></a>
+      <a href="home.html" class="btn btn-exit btn-congrats">Ir para o início</a>
+    </div>
+  </div>
 </body>
 </html>
