Tela index + background

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         
         
         <div class="card-body">
+          <img src="imgs/background.png" width="300px" height="300px">
           <h5 class="card-title2">Zup Cultura Game</h5>
           <p class="text_card">O nosso jeito ZUP de disseminar cultura.</p>
           <a href="home.html" class="btn btn-primary">Vamos lá!</a>
