--- a/IfRespostasErradas/erradop7.html
+++ b/IfRespostasErradas/erradop7.html
@@ -13,7 +13,7 @@
 <body>
   <div class="card container container-result">
     <p class="card-title result-title">Tente novamente</p>
-    <img class="card-img-top card-img-result" src="../OsPilaresDaCultura/AprendizadoAcimaDoPlano/aprendizadoR.png" alt="Imagem do card tente novamente">
+    <img onmouseover="teste.play()" class="card-img-top card-img-result" src="../OsPilaresDaCultura/AprendizadoAcimaDoPlano/aprendizadoR.png" alt="Imagem do card tente novamente">
     <img class="card-img-top card-img-result" src="../OsPilaresDaCultura/AprendizadoAcimaDoPlano/templateAprendizadoAcimaDoPlano.jpeg" alt="Card sobre o pilar Aprendizado Acima do Plano">
     <div class="card-body btn-group-next">
       <p>
@@ -22,6 +22,10 @@
         <a href="../Perguntas/pergunta7.html" class="btn btn-continue">Tentar novamente</a>
       </p>
     </div>
+    <script>
+      var teste = new Audio();
+      teste.src = 'https://www.soundjay.com/misc/sounds/fail-trombone-01.mp3';
+      </script>
   </div>
 </body>
 </html>
