atualizaçao do icon das abas

--- a/certificado.html
+++ b/certificado.html
@@ -15,6 +15,7 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="styles.css" />
+    <link rel="shortcut icon" href="imgs/LogoRGB-08.png" >
   </head>
   <title>Cultura Game - Certificado</title>
   <body>
