--- a/IfRespostasCertas/certop10.html
+++ b/IfRespostasCertas/certop10.html
@@ -6,6 +6,8 @@
   <link rel="stylesheet" href="..\styles.scss">
   <link href='https://fonts.googleapis.com/css?family=Dosis' rel='stylesheet'>
   <link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet'>
+  <link rel="shortcut icon" href="imgs/LogoRGB-08.png" >
+  <link rel="shortcut icon" href="imgs/LogoRGB-08.png" >
 </head>
 <title>
   Cultura Game - Acertou!
