--- a/IfRespostasErradas/erradop13.html
+++ b/IfRespostasErradas/erradop13.html
@@ -1,31 +1,55 @@
 <html>
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-  <link rel="stylesheet" href="../styles.scss">
-  <link href='https://fonts.googleapis.com/css?family=Dosis' rel='stylesheet'>
-  <link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet'>
-</head>
-<title>
-  Cultura Game - Tente novamente
-</title>
-<body>
-  <div class="card container container-result">
-    <p class="card-title result-title">Tente novamente</p>
-    <img onmouseover="teste.play()" class="card-img-top card-img-result" src="../OsPilaresDaCultura/SejaAutentico/autenticoR.png" alt="Imagem do card tente novamente">
-    <img class="card-img-top card-img-result" src="../OsPilaresDaCultura/SejaAutentico/templateSejaAutentico.jpeg" alt="Card sobre o pilar Seja Autentico">
-    <div class="card-body btn-group-next">
-      <p>
-        <a href="../home.html" class="btn btn-danger btn-exit">Sair</a>
-        <a class="space"></a>
-        <a href="../Perguntas/pergunta13.html" class="btn btn-continue">Tentar novamente</a>
-      </p>
-    </div>
-    <script>
-      var teste = new Audio();
-      teste.src = 'https://www.soundjay.com/misc/sounds/fail-trombone-01.mp3';
+  <head>
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+      integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="../styles.scss" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Dosis"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css?family=Lato"
+      rel="stylesheet"
+    />
+    <link rel="shortcut icon" href="imgs/LogoRGB-08.png" />
+  </head>
+  <title>Cultura Game - Tente novamente</title>
+  <body>
+    <div class="card container container-result">
+      <p class="card-title result-title">Tente novamente</p>
+      <img
+        onmouseover="teste.play()"
+        class="card-img-top card-img-result"
+        src="../OsPilaresDaCultura/SejaAutentico/autenticoR.png"
+        alt="Imagem do card tente novamente"
+      />
+      <img
+        class="card-img-top card-img-result"
+        src="../OsPilaresDaCultura/SejaAutentico/templateSejaAutentico.jpeg"
+        alt="Card sobre o pilar Seja Autentico"
+      />
+      <div class="card-body btn-group-next">
+        <p>
+          <a href="../home.html" class="btn btn-danger btn-exit">Sair</a>
+          <a class="space"></a>
+          <a href="../Perguntas/pergunta13.html" class="btn btn-continue"
+            >Tentar novamente</a
+          >
+        </p>
+      </div>
+      <script>
+        var teste = new Audio();
+        teste.src = "https://www.soundjay.com/misc/sounds/fail-trombone-01.mp3";
       </script>
-  </div>
-</body>
+    </div>
+  </body>
 </html>
