--- a/IfRespostasErradas/erradop9.html
+++ b/IfRespostasErradas/erradop9.html
@@ -6,7 +6,8 @@
   <link rel="stylesheet" href="../styles.scss">
   <link href='https://fonts.googleapis.com/css?family=Dosis' rel='stylesheet'>
   <link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet'>
-</head>
+
+  <link rel="shortcut icon" href="imgs/LogoRGB-08.png" ></head>
 <title>
   Cultura Game - Tente novamente
 </title>
